# agi-eval-sandbox

./: .bandit  .codeclimate.yml  .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .env.staging  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc.js  .releaserc.json  .ruff.toml  .yamllint.yaml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_BREAKTHROUGH.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE_FINAL.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.json  Dockerfile  Dockerfile.optimized  Dockerfile.test  FINAL_AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CHECKPOINTED.md  (+90 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation_request.yml  feature_request.yml  performance_issue.yml
.github/workflows/: ci.yml  dependency-update.yml  production-cicd.yml  release.yml  security-scan.yml
.terragon/: README.md  autonomous-executor.py  config.yaml  value-discovery-engine.py  value-metrics.json
dashboard/: .eslintrc.js  package.json
dashboard/src/: App.css  App.tsx  index.css  index.tsx
dashboard/src/components/: Navbar.tsx  NotificationSystem.tsx
dashboard/src/pages/: BenchmarksPage.tsx  ComparisonPage.tsx  EvaluationPage.tsx  HomePage.tsx  JobsPage.tsx  LeaderboardPage.tsx
dashboard/src/store/: apiSlice.ts  evaluationSlice.ts  store.ts  uiSlice.ts
deployment/: .env.production  docker-compose.yml
deployment/docker/: Dockerfile
deployment/kubernetes/: deployment.yaml
deployment/kubernetes/production/: deployment.yaml  namespace.yaml
deployment/production/: docker-compose.production.yml
deployment/production/nginx/: nginx.conf
deployment/scripts/: deploy.sh
docker/: entrypoint.sh  healthcheck.py
docs/: DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 001-fastapi-framework-choice.md  001-fastapi-web-framework.md  002-postgresql-timescaledb-data-storage.md  002-postgresql-timescaledb.md  003-celery-redis-task-processing.md  004-react-frontend-framework.md  005-kubernetes-container-orchestration.md  template.md
docs/api/: README.md
docs/automation/: AUTOMATION_GUIDE.md
docs/deployment/: BUILD_GUIDE.md  DEPLOYMENT_AUTOMATION.md
docs/guides/: README.md
docs/maintenance/: README.md
docs/monitoring/: OBSERVABILITY_GUIDE.md
docs/operational/: DISASTER_RECOVERY.md  INCIDENT_RESPONSE.md  PERFORMANCE_OPTIMIZATION.md
docs/performance/: README.md
docs/refactoring/: README.md
docs/runbooks/: README.md
docs/runbooks/incidents/: service-outage.md
docs/security/: DEPLOYMENT_SECURITY.md  SBOM_GENERATION.md  SLSA_COMPLIANCE.md
docs/tasks/: README.md
docs/testing/: LOAD_TESTING.md  TESTING_STRATEGY.md
docs/workflows/: AUTONOMOUS_INTEGRATION.md  CI_CD_SETUP.md  README.md  SLSA_COMPLIANCE.md
docs/workflows/examples/: ci.yml  dependabot.yml  deploy.yml  security.yml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml
k8s/production/: api-deployment.yaml  api-service.yaml  hpa.yaml  namespace.yaml
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  health-checks.yml  loki-config.yml  otel-collector.yml  prometheus.yml  promtail-config.yml
monitoring/grafana/dashboards/: agi-eval-dashboard.json  application-dashboard.json  infrastructure-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/jaeger/: jaeger-config.yml
monitoring/rules/: agi-eval.yml
performance/artillery/: artillery.yml
performance/k6/: load-test.js
scripts/: dependency-update-automation.sh  dev-setup.sh  generate-sbom.sh  metrics-collection.py  release.sh  repository-maintenance.py  run-tests.sh
src/agi_eval_sandbox/: __init__.py  autonomous_sdlc_integration.py  cli.py  py.typed  simple_cli.py
src/agi_eval_sandbox/api/: __init__.py  main.py  models.py  progressive_endpoints.py  simple_main.py
src/agi_eval_sandbox/config/: __init__.py  settings.py  simple_settings.py
src/agi_eval_sandbox/core/: __init__.py  advanced_compressor.py  autoscaling.py  benchmarks.py  cache.py  concurrency.py  context_compressor.py  evaluator.py  exceptions.py  health.py  intelligent_cache.py  logging_config.py  models.py  monitoring.py  optimization.py  performance.py  results.py  security.py  validation.py
src/agi_eval_sandbox/monitoring/: advanced_production_monitoring.py
src/agi_eval_sandbox/quality/: __init__.py  adaptive_quality_intelligence.py  ai_driven_quality_gates.py  progressive_quality_gates.py  quality_gates.py  quantum_quality_optimization.py  security_scanner.py
src/agi_eval_sandbox/research/: __init__.py  adaptive_benchmark.py  autonomous_research_discovery.py  drift_detection.py  generation_4_autonomous_framework.py  generation_5_quantum_meta_learning.py  ml_performance_optimizer.py  neural_cache.py  quantum_evaluator.py  research_framework.py
tests/: conftest.py  progressive_quality_gates_test.py  utils.py
tests/e2e/: example.spec.ts  global-setup.ts  global-teardown.ts
tests/fixtures/: README.md  factories.py
tests/fixtures/mocks/: __init__.py  model_mocks.py
tests/integration/: test_api_comprehensive.py  test_api_example.py  test_api_integration.py
tests/performance/: test_benchmark_performance.py  test_load.py
tests/research/: test_basic_research.py  test_research_framework.py
tests/setup/: jest.setup.ts
tests/unit/: test_benchmarks.py  test_core.py  test_example.py  test_models.py  test_results.py  test_validation.py
